Add section for debugging saving auxiliary data

--- a/classifier/input-update.ipynb
+++ b/classifier/input-update.ipynb
@@ -12,7 +12,15 @@
     "- [Cell Centering](#Cell-Centering)\n",
     "- [Optimisation](#Optimisation)\n",
     "- [Final Code](#Final-Code)\n",
-    "- [Image Validation](#Image-Validation)"
+    "- [Image Validation](#Image-Validation)\n",
+    "- [Debugging Auxiliary Data](#Debugging-Auxiliary-Data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialisation: run the following cells to setup required modules and variables"
    ]
   },
   {
@@ -109,6 +117,13 @@
     "    'cell_geo_rPerp', 'cell_geo_deta', 'cell_geo_dphi', 'cell_geo_volume',\n",
     "    'cell_geo_sigma'\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "End initialisation"
    ]
   },
   {
@@ -9093,7 +9108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9874,7 +9889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10532,6 +10547,295 @@
     "            cbar.set_label('Energy fraction', rotation=270, labelpad=20)\n",
     "            plt.savefig(plotpath+ptype+'_'+layer+'_clusterE'+str(i)+'.pdf')\n",
     "            plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Debugging Auxiliary Data\n",
+    "<div style=\"text-align: right\"> <a href=\"#Experimentation-with-'graph'-style-inputs\">Top</a> </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class cell_info:\n",
+    "    '''\n",
+    "    Convenience accessor for retrieving cell information via the 'cluster_cell_ID' hash.\n",
+    "    The constructor takes a path to a root file containing the 'CellGeo' tree as its only argument.\n",
+    "    Given the 'cluster_cell_ID' hash for a cell, retrieve its information by indexing a cell_info object with that hash; for example:\n",
+    "      ci = cell_info('inputfile.root')\n",
+    "      ci[1149470720] # hash for a cell in TileBar0 (cell_geo_sampling=12)\n",
+    "    Alternatively, you can use the member functions 'get_cell_info' or 'get_cell_info_vector' directly by passing them the hash as their only argument.\n",
+    "    '''\n",
+    "    meta_tree = 'CellGeo'\n",
+    "    id_branch = 'cell_geo_ID'\n",
+    "    \n",
+    "    def __init__(self, metafile):\n",
+    "        with ur.open(metafile) as ifile:\n",
+    "            self.meta_keys = ifile[self.meta_tree].keys()\n",
+    "            self.celldata = ifile[self.meta_tree].arrays(\n",
+    "                self.meta_keys)\n",
+    "            \n",
+    "        self.id_map = {}\n",
+    "        for i, cell_id in enumerate(self.celldata[self.id_branch][0]):\n",
+    "            self.id_map[cell_id] = i\n",
+    "\n",
+    "    def get_cell_info(self, cell_id):\n",
+    "        return {\n",
+    "            k : self.celldata[k][0][self.id_map[cell_id]]\n",
+    "            for k in self.meta_keys\n",
+    "        }\n",
+    "    \n",
+    "    def get_cell_info_vector(self, cell_id):\n",
+    "        res = []\n",
+    "        for k in self.meta_keys:\n",
+    "            if(k == self.id_branch):\n",
+    "                continue\n",
+    "            res.append(self.celldata[k][0][self.id_map[cell_id]])\n",
+    "        return res\n",
+    "    \n",
+    "    def __getitem__(self, key):\n",
+    "        return self.get_cell_info(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_sq(x,y):\n",
+    "    return x*x+y*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cell_images(input_file, sampling_layers, c_info=None,\n",
+    "                       eta_range=0.4, phi_range=0.4, print_frequency=1000,\n",
+    "                       max_events=None, chunk_size=100000):\n",
+    "    '''Generates images from a 'graph' format input file.\n",
+    "    The output is a dictionary with the following structure:\n",
+    "      images[layer][event_index][eta_index][phi_index]\n",
+    "    The arguments are as follows:\n",
+    "      input_file: path to the desired input file\n",
+    "      sampling_layers: a dict which specifies which layers should\n",
+    "                       have images generated for them; this dict\n",
+    "                       should have entries of the form\n",
+    "                         (int)cell_geo_sampling : 'LayerName'\n",
+    "      c_info: either a path to a root file which contains the\n",
+    "              'CellGeo' tree, or a cell_info object; defaults\n",
+    "              to using input_file to create a cell_info object\n",
+    "              if not provided\n",
+    "      eta/phi_range: full width of the 'window' around cluster\n",
+    "                     centres to render images in; cells outside\n",
+    "                     this window will be ignored\n",
+    "      print_frequency: progress printout will be displayed every\n",
+    "                       integer multiple of this parameter\n",
+    "    '''\n",
+    "    \n",
+    "    if(c_info==None):\n",
+    "        ci = cell_info(input_file)\n",
+    "    elif(isinstance(c_info,str)):\n",
+    "        ci = cell_info(c_info)\n",
+    "    elif(isinstance(c_info,cell_info)):\n",
+    "        ci = c_info\n",
+    "    else:\n",
+    "        raise ValueError('Invalid argument for c_info: must be cell_info object or path to a root file with the CellGeo tree.')\n",
+    "    \n",
+    "    with ur.open(input_file) as ifile:\n",
+    "        entries = ifile['EventTree'].num_entries\n",
+    "        \n",
+    "        if(max_events==None):\n",
+    "            max_events = entries\n",
+    "        chunk_size = min(chunk_size,max_events)\n",
+    "    \n",
+    "        eta_min = -1*eta_range/2.0\n",
+    "        phi_min = -1*phi_range/2.0\n",
+    "\n",
+    "        end_index = max_events//chunk_size-1\n",
+    "        n_clus = 0\n",
+    "        for chunk_index,pdata in enumerate(ifile['EventTree'].iterate(['cluster_cell_ID'],step_size=chunk_size)):\n",
+    "            n_clus += sum(ak.num(pdata['cluster_cell_ID']))\n",
+    "\n",
+    "            if(chunk_index >= end_index):\n",
+    "                break\n",
+    "        \n",
+    "        pcells = {\n",
+    "            layer : np.zeros((n_clus,meta['len_eta'],meta['len_phi']))\n",
+    "            for layer,meta in mu.cell_meta.items()\n",
+    "        }\n",
+    "        \n",
+    "        pdata_save = {\n",
+    "            qty : np.zeros(n_clus)\n",
+    "            for qty in [\n",
+    "                'cluster_Eta', 'cluster_Phi',\n",
+    "                'cluster_E', 'cluster_ENG_CALIB_TOT'\n",
+    "            ]\n",
+    "        }\n",
+    "\n",
+    "#         print(chunk_size,max_events,end_index)\n",
+    "        clus_index = 0\n",
+    "        for chunk_index, pdata in enumerate(ifile['EventTree'].iterate(\n",
+    "            ['cluster_cell_ID', 'cluster_cell_E', 'cluster_ENG_CALIB_TOT',\n",
+    "             'cluster_E', 'cluster_Eta', 'cluster_Phi'],step_size=chunk_size)):\n",
+    "            \n",
+    "            if(chunk_index == end_index):\n",
+    "                if( max_events % chunk_size == 0):\n",
+    "                    n_events = chunk_size\n",
+    "                else:\n",
+    "                    n_events = max_events % chunk_size\n",
+    "            else:\n",
+    "                n_events = chunk_size\n",
+    "            print('chunk {}, {} events'.format(chunk_index,n_events))\n",
+    "            for evt in range(n_events):\n",
+    "                if((evt+1)%print_frequency==0):\n",
+    "                    print('Event {}/{}'.format(evt+1,max_events))\n",
+    "\n",
+    "                for clus in range(len(pdata['cluster_cell_ID'][evt])):\n",
+    "                    # save relevant quantities to auxiliary dictionary\n",
+    "                    for qty in [\n",
+    "                        'cluster_Eta', 'cluster_Phi',\n",
+    "                        'cluster_E', 'cluster_ENG_CALIB_TOT'\n",
+    "                    ]:\n",
+    "                        pdata_save[qty][clus_index] = pdata[qty][evt][clus]\n",
+    "                    \n",
+    "                    c_eta, c_phi = 999, 999 # dummy large values\n",
+    "                    valid_cells = []\n",
+    "\n",
+    "                    # find the cell closest to the cluster centre\n",
+    "                    for cell in range(len(pdata['cluster_cell_ID'][evt][clus])):\n",
+    "                        c_info = ci[pdata['cluster_cell_ID'][evt][clus][cell]]\n",
+    "                        if(\n",
+    "                           dist_sq(\n",
+    "                               c_info['cell_geo_eta']-pdata['cluster_Eta'][evt][clus],\n",
+    "                               c_info['cell_geo_phi']-pdata['cluster_Phi'][evt][clus]) < \n",
+    "                           dist_sq(\n",
+    "                               c_eta-pdata['cluster_Eta'][evt][clus],\n",
+    "                               c_phi-pdata['cluster_Phi'][evt][clus])\n",
+    "                          ):\n",
+    "                            c_eta = c_info['cell_geo_eta']\n",
+    "                            c_phi = c_info['cell_geo_phi']\n",
+    "\n",
+    "\n",
+    "                        # cache index of cells in the layers of interest\n",
+    "                        if c_info['cell_geo_sampling'] in sampling_layers:\n",
+    "                            valid_cells.append(cell)\n",
+    "\n",
+    "                    # now add the contributions of cells within the eta/phi\n",
+    "                    # window of that central cell\n",
+    "                    for cell in valid_cells:\n",
+    "                        c_info = ci[pdata['cluster_cell_ID'][evt][clus][cell]]\n",
+    "                        layer = sampling_layers[c_info['cell_geo_sampling']]\n",
+    "\n",
+    "                        # calculate eta/phi bins using the formula\n",
+    "                        #   bin = floor( (x-x_min) * nbins / x_range )\n",
+    "                        eta_bin = int(\n",
+    "                            (c_info['cell_geo_eta']-c_eta-eta_min) *\n",
+    "                            mu.cell_meta[layer]['len_eta'] / eta_range\n",
+    "                        )\n",
+    "                        phi_bin = int(\n",
+    "                            (c_info['cell_geo_phi']-c_phi-phi_min) *\n",
+    "                            mu.cell_meta[layer]['len_phi'] / phi_range\n",
+    "                        )\n",
+    "\n",
+    "                        # discard cells outside the eta/phi window\n",
+    "                        if(eta_bin<0 or\n",
+    "                           eta_bin>=mu.cell_meta[layer]['len_eta'] or\n",
+    "                           phi_bin<0 or\n",
+    "                           phi_bin>=mu.cell_meta[layer]['len_phi']):\n",
+    "                            continue\n",
+    "\n",
+    "                        pcells[layer][clus_index][eta_bin][phi_bin] += pdata['cluster_cell_E'][evt][clus][cell] / pdata['cluster_E'][evt][clus]\n",
+    "                        # note: 'cluster_E' includes energies from cells with <5 MeV, which are not\n",
+    "                        # included in this dataset, so the energy fraction will be slightly off\n",
+    "\n",
+    "                    clus_index += 1\n",
+    "                    \n",
+    "            if(chunk_index >= end_index):\n",
+    "                break\n",
+    "\n",
+    "        return pcells, pdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chunk 0, 2000 events\n",
+      "Event 1000/2000\n",
+      "Event 2000/2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "pcells,pdata = create_cell_images(inputpath+'single_pion.mltree.root',sampling_layers,c_info=ci)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Array [[9.07], [70.1], ... [5.66, 5.93, 4.17]] type='2000 * var * float32'>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#                     'cluster_Eta', 'cluster_Phi',\n",
+    "#                     'cluster_E', 'cluster_ENG_CALIB_TOT'\n",
+    "\n",
+    "pdata['cluster_ENG_CALIB_TOT']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with ur.open(inputpath+'single_pion.mltree.root') as ifile:\n",
+    "    pd = ifile['EventTree'].arrays(['cluster_E'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Array [{cluster_E: [7.35]}, ... 6.43, 5.09]}] type='2000 * {\"cluster_E\": var * ...'>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd"
    ]
   }
  ],
