Fix merging data across multiple input files

--- a/classifier/TopoClusterClassifierCNN.ipynb
+++ b/classifier/TopoClusterClassifierCNN.ipynb
@@ -1619,7 +1619,7 @@
     "for layer in mu.cell_meta:\n",
     "    models[layer] = tf.keras.models.load_model(modelpath+\"model_cnn_\"+layer+\".h5\")\n",
     "    with open(modelpath + 'model_cnn_'+layer+'.history','rb') as model_history_file:\n",
-    "        history[laye] = pickle.load(model_history_file)"
+    "        history[layer] = pickle.load(model_history_file)"
    ]
   },
   {
